--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -4614,7 +4614,7 @@
             const cubeDisplayValue = cubeShown !== 0 ? cubeShown : cubeValue;
             let exponent = 0;
             if (cubeDisplayValue >= 2) {
-                exponent = Math.log2(cubeDisplayValue) - 1;
+                exponent = Math.log2(cubeDisplayValue);
             }
             xgid += exponent.toString();
             xgid += ':'
