--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -4621,7 +4621,7 @@
             xgid += ':'
             const cubeOwner = document.getElementById('cube-owner-select').value;
             let cubePosition = 0;
-            if (cubeDisplayValue !== 0) {
+            if (cubeValue !== 0) {
                 // Определяем владельца куба в терминах upper/lower
                 // В XGID: 1 = lower (нижний), -1 = upper (верхний)
                 let isLowerPlayer;
