--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -5462,10 +5462,10 @@
         //     document.getElementById('xgid-text').textContent = xgid;
         //     document.getElementById('xgid-display').style.display = 'block';
         // }
-        function hideXGID() {
-            document.getElementById('xgid-display').style.display = 'none';
-        }
-        document.getElementById('xgid-close').addEventListener('click', hideXGID);
+        // function hideXGID() {
+        //     document.getElementById('xgid-display').style.display = 'none';
+        // }
+        // document.getElementById('xgid-close').addEventListener('click', hideXGID);
 
         /**
          * Парсит GNU move строку и возвращает удобный объект для получения информации о ходах.
